mega-repo/assets/github/repos/ethereum/solidity/test/libevmasm/evmAssemblyTests/isoltestTesting/code_generation_error.asmjson
{
    ".code": [
        {"name": "PUSH [$]", "value": "0"}
    ],
    ".data": {
        "0": {
            ".code": [
                {"name": "PUSHIMMUTABLE", "value": "x"}
            ]
        }
    }
}
// ----
// CodeGenerationError: Some immutables were read from but never assigned, possibly because of optimization.
